<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".About">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotationY="180"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/developerHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/developed_by"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/developer"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/openSourceHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/detail"
        android:textSize="15sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/openSourceLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="gitHubLink"
        android:text="@string/github_link"
        android:textColor="#4747FF"
        android:textSize="25sp" />

</LinearLayout>